[project]
name = "litstudy"
version = "1.0.6"
description = "Using the power of Python and Jupyter notebooks to automate analysis of scientific literature"
authors = [{ name = "Stijn Heldens", email = "s.heldens@esciencecenter.nl" }]
dependencies = [
    "bibtexparser",
    "feedparser",
    "gensim>=4.3.2",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "pybliometrics",
    "pyvis",
    "requests",
    "scikit-learn",
    "seaborn",
    "unidecode",
    "wordcloud",
    "wos",
    "scipy==1.12.0",
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache 2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.black]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/litstudy"]
